Update bigquery.md